--- a/css/typography.css
+++ b/css/typography.css
@@ -98,4 +98,5 @@
 #typography-card-portfolio{
    font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
    font-size: 1.7em;
+   line-height: 1em;
 }
